# ontology-mapper

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md
mapper/: .gitignore  AGENTS.md  CLAUDE.md  OntologyMapper Definition.md  OntologyMapper.txt  README.md  pyproject.toml
mapper/AGENTS/: OM__GENERATORS.md  OM__NIEM_AUGMENTATION_RULES.md  OM__ONTOLOGY_ADAPTERS.md  OM__PIPELINE_ENGINE.md  OM__SEARCH_AND_INDEXING.md  OM__TESTING_AND_INTERFACES.md  OM__VALIDATION.md
mapper/src/ontology_mapper/: __init__.py  batch_search.py  build_coherence_manifest.py  build_mapping_matrix.py  build_package_manifest.py  build_strategy_reports.py  build_vector_index.py  catalog_search.py  collect_alignments.py  compute_edge_overlap.py  compute_entropy.py  detect_staleness.py  extract_concepts.py  finalize_package.py  generate_cmf_catalog.py  generate_cmf_from_matrix.py  generate_edge_ontology.py  generate_kg_artifacts.py  generate_niem_catalog.py  generate_owl_catalog.py  generation_audit.py  generation_utils.py  ingest_csv.py  llm_service.py  ontology_specific.py  owl_cmf_bridge.py  package_edge_artifacts.py  pipeline.py  pipeline_config.py  pipeline_context.py  quality_gates.py  run_dir_utils.py  (+5 more)
mapper/tests/: conftest.py  test_batch_search.py  test_build_coherence_manifest.py  test_build_mapping_matrix.py  test_build_package_manifest.py  test_build_strategy_reports.py  test_catalog_adapter.py  test_catalog_search.py  test_collect_alignments.py  test_compute_edge_overlap.py  test_compute_entropy.py  test_detect_staleness.py  test_extract_concepts.py  test_finalize_package.py  test_generate_cmf_catalog.py  test_generate_cmf_from_matrix.py  test_generate_edge_ontology.py  test_generate_kg_artifacts.py  test_generate_niem_catalog.py  test_generate_owl_catalog.py  test_generation_audit.py  test_generation_utils.py  test_ingest_csv.py  test_kg_integration_cypher.py  test_kg_integration_neo4j.py  test_kg_integration_sparql.py  test_ontology_specific.py  test_package_edge_artifacts.py  test_pipeline_config.py  test_pipeline_context.py  test_pipeline_state.py  test_quality_gates.py  test_run_dir_utils.py  test_semantic_search.py  test_source_adapter.py  test_validate_edge_package.py  test_validate_input_package.py  test_vector_index.py  test_vector_search.py
runner/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
runner/AGENTS/: Boundary_Coherence__REFERENCE.md  Candidate_Filtering__PLAN.md  Pipeline__POST_RUN.md  Pipeline__PROJECT_RULES.md  Pipeline__REFERENCE.md  Pipeline__RUNBOOK.md  Pipeline__SEMANTIC_SEARCH.md  Pipeline__STAGE_1.md  Pipeline__STAGE_2.md  Pipeline__STAGE_3.md  Pipeline__STAGE_4.md  Pipeline__STAGE_5.md  Pipeline__STAGE_6.md  Pipeline__STAGE_7.md  Pipeline__STAGE_8.md  Target_OWL_Patterns.md  Web_UI__PLAN.md  edge-package-spec.md
runner/orchestrator_service/: __init__.py  conftest.py  evaluator.py  evaluator_openai.py  prompts.py  runner.py  schemas.py  test_evaluator.py  test_prompts.py  test_runner.py  test_schemas.py
runner/runner_tools/: _present_and_apply_human_review.py  feedback_report.py  preflight_specs.py  run_feedback.py  run_pipeline.py  smoke_test_openai.py  test_feedback_loop.py  test_feedback_report.py  test_preflight_specs.py  test_present_and_apply_human_review.py  test_run_feedback.py  test_run_pipeline.py  test_verify_stage_outputs.py  verify_stage_outputs.py
runner/smoke-tests/: redvale-niem6-2026-05-02.md
(+77 files in other folders)
